Closed
Bug 118010
Opened 23 years ago
Closed 23 years ago
Non-latin1 recipient is displayed garbled when picked up from address picker
Categories
(MailNews Core :: Internationalization, defect)
Tracking
(Not tracked)
VERIFIED
FIXED
mozilla0.9.8
People
(Reporter: ji, Assigned: nhottanscp)
References
Details
(Keywords: regression)
Attachments
(1 file, 1 obsolete file)
6.40 KB,
patch
|
Details | Diff | Splinter Review |
******Observed with 01/03 trunk build****
After selecting a Ja address book card and clicking on Compose button, the Ja
recipient name appears garbled on new mail compose window.
Steps to reproduce:
1. Have a Japanese card in the address book.
2. Select the Japanese card and click on Compose window. You can see the Ja
recipients are garbled.
Or
1. Open a new mail compose window.
2. Click on Address button
3. Select a Japanese card and click on To: button, the Ja recipient name is
garbled on the list.
Keywords: nsbeta1,
regression
all recipients that are non-latin1 are displayed garbled through the Address picker.
Changed the summary based on Marina's comments.
Summary: Ja recipient is displayed garbled when picked up from address picker → Non-latin1 recipient is displayed garbled when picked up from address picker
Assignee | ||
Comment 4•23 years ago
|
||
Cc to putterman, sspitzer. Could this be related to the outliner change or
something else?
Assignee | ||
Updated•23 years ago
|
Status: NEW → ASSIGNED
Assignee | ||
Comment 5•23 years ago
|
||
I installed builds 12/21 and 12/22, the problem started from 12/22 build.
Assignee | ||
Comment 6•23 years ago
|
||
There were many changes on 12/21 to mailnews/addrbook directory for the outliner
change. Seth, any idea which file I should look at?
Assignee | ||
Comment 7•23 years ago
|
||
abCommon.js calls nsIMsgHeaderParser::MakeFullAddress, this function uses UTF-8
for input and output. This is not scriptable because JavaScript cannot handle UTF-8.
We need to change nsIMsgHeaderParser to make current functions to noscript and
add new functions which take PRUnichar*. Or change not to use MakeFullAddress.
How this was handled before the outliner change?
Assignee | ||
Comment 8•23 years ago
|
||
Assignee | ||
Updated•23 years ago
|
Target Milestone: --- → mozilla0.9.8
Comment 9•23 years ago
|
||
Comment on attachment 64203 [details] [diff] [review]
Added wstring version of MakeFullAddress, changed non wstring functions to noscript because they need UTF-8 string.
R=ducarroz
Attachment #64203 -
Flags: review+
Assignee | ||
Comment 10•23 years ago
|
||
*** Bug 119119 has been marked as a duplicate of this bug. ***
Comment 11•23 years ago
|
||
Comment on attachment 64203 [details] [diff] [review]
Added wstring version of MakeFullAddress, changed non wstring functions to noscript because they need UTF-8 string.
methods in idl should be in interCaps.
ParseHeaderAddresses() should be
parseHeaderAddresses()
this should be a simple change, since they are all noscript (meaning you won't
have to fix any JS)
except for MakeFullAddressWString().
when you make it makeFullAddressWString()
don't forget to fix abCommon.js
once you do that, sr=sspitzer
Attachment #64203 -
Flags: superreview+
Assignee | ||
Comment 12•23 years ago
|
||
ParseHeadersWithArray() is used in msgHdrViewOverlay.js, so that needs the
change too.
Assignee | ||
Comment 13•23 years ago
|
||
Attachment #64203 -
Attachment is obsolete: true
Assignee | ||
Comment 14•23 years ago
|
||
checked in
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Reporter | ||
Comment 15•23 years ago
|
||
Verified as fixed with 01/14 trunk builds.
Status: RESOLVED → VERIFIED
Updated•20 years ago
|
Product: MailNews → Core
Updated•16 years ago
|
Product: Core → MailNews Core
You need to log in
before you can comment on or make changes to this bug.
Description
•