Added wstring version of MakeFullAddress to nsIMsgHeaderParser, changed non wstring functions to noscript because they need UTF-8 string and are not scriptable, bug 118010, r=ducarroz, sr=sspitzer.